--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "pinia": "^3.0.3",
+    "uuid": "^11.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
