--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vuelidate/validators": "^2.0.4",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "firebase": "^12.1.0",
     "pinia": "^3.0.3",
     "uuid": "^11.1.0",
     "vue": "^3.5.17",
